// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots TMS/Buttons Default Bookmark Button 1`] = `
<button
  className="sc-bdfBQB jwyqxD"
  type="button"
/>
`;

exports[`Storyshots TMS/Buttons Marked Bookmark Button 1`] = `
<button
  className="sc-bdfBQB hoVnRM"
  type="button"
/>
`;

exports[`Storyshots TMS/Buttons Search Button 1`] = `
<button
  className="sc-gsTEea cOhArm"
  onClick={[Function]}
  type="button"
>
  Искать
</button>
`;

exports[`Storyshots TMS/Buttons Test Button 1`] = `
<button
  className="sc-gsTEea hancQJ"
  onClick={[Function]}
  type="button"
>
  Test Button
</button>
`;

exports[`Storyshots TMS/Filters Closed Filter 1`] = `
<div
  className="sc-hKgJUU"
>
  <div
    className="sc-jSgvzq dhiWeY"
  >
    Курс разработки
  </div>
  <div
    className="sc-eCstlR jJoBls"
  >
    <div
      className="sc-gKseQn egzexw"
    >
      Все курсы
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Closed Selected Filter 1`] = `
<div
  className="sc-hKgJUU"
>
  <div
    className="sc-jSgvzq dhiWeY"
  >
    Возраст
  </div>
  <div
    className="sc-eCstlR jJoBls"
  >
    <div
      className="sc-gKseQn egzexw"
    >
      Любой
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Filter 1`] = `
<div
  className="sc-hKgJUU"
>
  <div
    className="sc-jSgvzq dhiWeY"
  >
    Курс разработки
  </div>
  <div
    className="sc-eCstlR hgNQur"
  >
    <div
      className="sc-gKseQn kYGMXV"
    >
      Все курсы
    </div>
    <div
      className="sc-iBPTik hGYMUn"
    >
      <button
        className="sc-fubCzh igDTFD"
      >
        Отменить все
      </button>
      <label
        className="sc-pGacB idpLEj"
        htmlFor="Front end"
      >
        <input
          checked={true}
          className="sc-jrAFXE EBlLA"
          id="Front end"
          type="checkbox"
        />
        <div
          className="sc-dlfnuX hjhlCB"
        />
        Front end
      </label>
      <label
        className="sc-pGacB idpLEj"
        htmlFor="Java"
      >
        <input
          checked={true}
          className="sc-jrAFXE EBlLA"
          id="Java"
          type="checkbox"
        />
        <div
          className="sc-dlfnuX hjhlCB"
        />
        Java
      </label>
      <label
        className="sc-pGacB idpLEj"
        htmlFor="Python"
      >
        <input
          checked={true}
          className="sc-jrAFXE EBlLA"
          id="Python"
          type="checkbox"
        />
        <div
          className="sc-dlfnuX hjhlCB"
        />
        Python
      </label>
      <label
        className="sc-pGacB idpLEj"
        htmlFor="iOS"
      >
        <input
          checked={true}
          className="sc-jrAFXE EBlLA"
          id="iOS"
          type="checkbox"
        />
        <div
          className="sc-dlfnuX hjhlCB"
        />
        iOS
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Selected Filter 1`] = `
<div
  className="sc-hKgJUU"
>
  <div
    className="sc-jSgvzq dhiWeY"
  >
    Возраст
  </div>
  <div
    className="sc-eCstlR hgNQur"
  >
    <div
      className="sc-gKseQn kYGMXV"
    >
      Любой
    </div>
    <div
      className="sc-iBPTik hGYMUn"
    >
      <button
        className="sc-fubCzh igDTFD"
      >
        Отменить все
      </button>
      <label
        className="sc-pGacB idpLEj"
        htmlFor="меньше 18"
      >
        <input
          checked={true}
          className="sc-jrAFXE EBlLA"
          id="меньше 18"
          type="checkbox"
        />
        <div
          className="sc-dlfnuX hjhlCB"
        />
        меньше 18
      </label>
      <label
        className="sc-pGacB idpLEj"
        htmlFor="18-30"
      >
        <input
          checked={true}
          className="sc-jrAFXE EBlLA"
          id="18-30"
          type="checkbox"
        />
        <div
          className="sc-dlfnuX hjhlCB"
        />
        18-30
      </label>
      <label
        className="sc-pGacB idpLEj"
        htmlFor="30-45"
      >
        <input
          checked={true}
          className="sc-jrAFXE EBlLA"
          id="30-45"
          type="checkbox"
        />
        <div
          className="sc-dlfnuX hjhlCB"
        />
        30-45
      </label>
      <label
        className="sc-pGacB idpLEj"
        htmlFor="больше 45"
      >
        <input
          checked={true}
          className="sc-jrAFXE EBlLA"
          id="больше 45"
          type="checkbox"
        />
        <div
          className="sc-dlfnuX hjhlCB"
        />
        больше 45
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Inputs Default Input 1`] = `
<label
  className="sc-iqHYmW iaLrNz"
>
  <span
    className="sc-crrszt fWOyMz"
  >
    E-mail
  </span>
  <input
    className="sc-kEjbQP grvQAX"
    placeholder="Введите e-mail"
    type="email"
  />
</label>
`;

exports[`Storyshots TMS/Inputs Invalid Input 1`] = `
<label
  className="sc-iqHYmW iaLrNz"
>
  <span
    className="sc-crrszt gIdUCg"
  >
    Некорректный e-mail
  </span>
  <input
    className="sc-kEjbQP jRnEkm"
    placeholder="Введите e-mail"
    type="email"
    value="ivan@teachmeskills.com"
  />
</label>
`;

exports[`Storyshots TMS/NavbarMenu Navbar 1`] = `
<nav
  className="sc-gWHigU kycFqx"
>
  <div
    className="sc-cBNeex gBRBYB"
  />
  <ul
    className="sc-citxvW huTFpg"
  >
    <li
      className="sc-jcVcSv iupfAu"
    >
      <a
        className="sc-bZSRNg dzUtNs"
        href="/resumes"
      >
        Резюме
      </a>
    </li>
    <li
      className="sc-jcVcSv iupfAu"
    >
      <a
        className="sc-bZSRNg dzUtNs"
        href="/responses"
      >
        Отклики
      </a>
    </li>
    <li
      className="sc-jcVcSv iupfAu"
    >
      <a
        className="sc-bZSRNg dzUtNs"
        href="/bookmarks"
      >
        Избранное
      </a>
    </li>
  </ul>
  <div
    className="sc-iUuxjF gbhZLU"
  >
    <div
      className="sc-kLgnNl lpixgT sc-iBaQBe cAjXlq"
    >
      <div
        className="sc-dQoVA kAAejF"
        onClick={[Function]}
      />
    </div>
    <div
      className="sc-bYEvvW kVsYCP"
    >
      <div
        className="sc-fodVek hDQzhk sc-bkzYnD sc-ezredP kwHrhZ heZbSo"
        onClick={[Function]}
      >
        <p
          className="sc-fFucqa iplZQa"
        >
          ИИ
        </p>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Empty 1`] = `
<div
  className="sc-dQoVA iqwBPr"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter One 1`] = `
<div
  className="sc-dQoVA kAAejF"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Two 1`] = `
<div
  className="sc-dQoVA bEzqSY"
/>
`;

exports[`Storyshots TMS/Notifications Notifications Empty 1`] = `
<div
  className="sc-kLgnNl lpixgT"
>
  <div
    className="sc-dQoVA iqwBPr"
  />
  <div
    className="sc-bBXrwG bQKKLA sc-iktFfs jgbsFm"
  >
    <ul
      className="sc-jJEKmz tMJzZ"
    >
      <li
        className="sc-hiSbEG fzHVEu"
      >
        "У вас нет новых уведомлений"
      </li>
    </ul>
    <div
      className="sc-iwyWTf PPELC"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications One 1`] = `
<div
  className="sc-kLgnNl lpixgT"
>
  <div
    className="sc-dQoVA kAAejF"
  />
  <div
    className="sc-bBXrwG bQKKLA sc-iktFfs jgbsFm"
  >
    <ul
      className="sc-jJEKmz tMJzZ"
    >
      <li
        className="sc-hiSbEG fzHVEu"
      >
        "У вас 5 новых приглашений"
      </li>
    </ul>
    <div
      className="sc-iwyWTf PPELC"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications Two 1`] = `
<div
  className="sc-kLgnNl lpixgT"
>
  <div
    className="sc-dQoVA bEzqSY"
  />
  <div
    className="sc-bBXrwG bQKKLA sc-iktFfs jgbsFm"
  >
    <ul
      className="sc-jJEKmz tMJzZ"
    >
      <li
        className="sc-hiSbEG fzHVEu"
      >
        "У вас 59 новых приглашений"
      </li>
      <li
        className="sc-hiSbEG fzHVEu"
      >
        "У вас 63 новых ответов"
      </li>
      <li
        className="sc-hiSbEG fzHVEu"
      >
        "У вас 27 новых отказов"
      </li>
    </ul>
    <div
      className="sc-iwyWTf PPELC"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Search Input Search 1`] = `
<div
  className="sc-bqyKOL fHWvfc"
>
  <input
    className="sc-kstqJO immyPO"
    placeholder="search"
    type="search"
  />
  <div
    className="sc-hBEYId eHlfxf"
  />
</div>
`;

exports[`Storyshots TMS/Search Search Closed 1`] = `
<div
  className="sc-eggMyH jdMaQq"
>
  <div
    className="sc-cTkxnA iOCwWa"
  >
    <div
      className="sc-bqyKOL fHWvfc"
    >
      <input
        className="sc-kstqJO immyPO"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-hBEYId eHlfxf"
      />
    </div>
    <button
      className="sc-gsTEea cOhArm sc-cOajNj egDbbn"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/Search Search Opened 1`] = `
<div
  className="sc-eggMyH jdMaQq"
>
  <div
    className="sc-cTkxnA icGgkw"
  >
    <div
      className="sc-bqyKOL fHWvfc"
    >
      <input
        className="sc-kstqJO immyPO"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-hBEYId eHlfxf"
      />
    </div>
    <button
      className="sc-gsTEea cOhArm sc-cOajNj ckXpZo"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Искать
    </button>
  </div>
  <div
    className="sc-jNMcJZ exIglD"
  >
    <ul
      className="sc-dOSRxR iTDedl"
    >
      <li
        className="sc-bBrNTY"
      >
        <div
          className="sc-hKgJUU"
        >
          <div
            className="sc-jSgvzq dhiWeY"
          >
            Курс разработки
          </div>
          <div
            className="sc-eCstlR jJoBls"
          >
            <div
              className="sc-gKseQn egzexw"
              onClick={[Function]}
            >
              Все курсы
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-bBrNTY"
      >
        <div
          className="sc-hKgJUU"
        >
          <div
            className="sc-jSgvzq dhiWeY"
          >
            Оценка диплома
          </div>
          <div
            className="sc-eCstlR jJoBls"
          >
            <div
              className="sc-gKseQn egzexw"
              onClick={[Function]}
            >
              Все оценки
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-bBrNTY"
      >
        <div
          className="sc-hKgJUU"
        >
          <div
            className="sc-jSgvzq dhiWeY"
          >
            Возраст
          </div>
          <div
            className="sc-eCstlR jJoBls"
          >
            <div
              className="sc-gKseQn egzexw"
              onClick={[Function]}
            >
              Любой
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-bBrNTY"
      >
        <div
          className="sc-hKgJUU"
        >
          <div
            className="sc-jSgvzq dhiWeY"
          >
            Английский язык
          </div>
          <div
            className="sc-eCstlR jJoBls"
          >
            <div
              className="sc-gKseQn egzexw"
              onClick={[Function]}
            >
              Любой уровень
            </div>
          </div>
        </div>
      </li>
    </ul>
    <button
      className="sc-gsTEea cOhArm sc-cOajNj sc-Azgjq ckXpZo eGIyDM"
      type="button"
    >
      СКРЫТЬ ФИЛЬТРЫ
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentCV Student CV Marked 1`] = `
<div
  className="sc-khAkCZ cduNvA"
>
  <div
    className="sc-hTZgZg ghJxWH"
  >
    <div
      className="sc-jgHCSr dXgcNk"
    >
      <h2
        className="sc-gTgzoy FSicZ"
      >
        Роман
         
        Шашков
      </h2>
      <p
        className="sc-laRQdt lmIdyx"
      >
        Python Developer
        , 25 лет
      </p>
    </div>
    <div
      className="sc-iNqMzA iDIqfV"
    >
      <button
        className="sc-gsTEea cOhArm sc-jeGTLq inbMjs"
        type="button"
      >
        Пригласить
      </button>
      <button
        className="sc-bdfBQB hoVnRM"
        type="button"
      />
    </div>
  </div>
  <div
    className="sc-eJMPIT hALyPC"
  />
</div>
`;

exports[`Storyshots TMS/StudentCV Student CV Not Marked 1`] = `
<div
  className="sc-khAkCZ cduNvA"
>
  <div
    className="sc-hTZgZg bHKzDg"
  >
    <div
      className="sc-jgHCSr dXgcNk"
    >
      <h2
        className="sc-gTgzoy FSicZ"
      >
        Иван
         
        Иванов
      </h2>
      <p
        className="sc-laRQdt lmIdyx"
      >
        Java Developer
      </p>
    </div>
    <div
      className="sc-iNqMzA iDIqfV"
    >
      <button
        className="sc-gsTEea cOhArm sc-jeGTLq inbMjs"
        type="button"
      >
        Пригласить
      </button>
      <button
        className="sc-bdfBQB jwyqxD"
        type="button"
      />
    </div>
  </div>
  <div
    className="sc-eJMPIT hALyPC"
  />
</div>
`;

exports[`Storyshots TMS/StudentImages Image In Circle 1`] = `
<div
  className="sc-fodVek jPYPJz sc-bkzYnD cfjnJI"
/>
`;

exports[`Storyshots TMS/StudentImages Image On Card 1`] = `
<div
  className="sc-fodVek jPYPJz"
/>
`;

exports[`Storyshots TMS/StudentImages No Image In Circle 1`] = `
<div
  className="sc-fodVek hDQzhk sc-bkzYnD kwHrhZ"
>
  <p
    className="sc-fFucqa iplZQa"
  >
    ЗФ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentImages No Image On Card 1`] = `
<div
  className="sc-fodVek hDQzhk"
>
  <p
    className="sc-fFucqa iplZQa"
  >
    ИИ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card 1`] = `
<div
  className="sc-nFqVA qUrVE"
>
  <div
    className="sc-fodVek hDQzhk"
  >
    <p
      className="sc-fFucqa iplZQa"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-ehSDrC hqGEVy"
  >
    <h3
      className="sc-gGmKaI fkLipS"
    >
      Иван
       
      Иванов
    </h3>
    <p
      className="sc-clsFYl hPptIf"
    >
      Java Developer
    </p>
    <div
      className="sc-fbkiRW crPBlR"
    >
      <div
        className="sc-idOiZg botHth"
      >
        Front End
      </div>
      <div
        className="sc-idOiZg cUhKUV"
      >
        Лучший ученик
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card Active 1`] = `
<div
  className="sc-nFqVA bEKQSj"
>
  <div
    className="sc-fodVek jPYPJz"
  />
  <div
    className="sc-ehSDrC hqGEVy"
  >
    <h3
      className="sc-gGmKaI fkLipS"
    >
      Роман
       
      Шашков
    </h3>
    <p
      className="sc-clsFYl hPptIf"
    >
      Python Developer
      , 25 лет
    </p>
    <div
      className="sc-fbkiRW crPBlR"
    >
      <div
        className="sc-idOiZg botHth"
      >
        Back End
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Tags Course Tag 1`] = `
<div
  className="sc-dIUeWJ bnNrLA"
>
  Front End
</div>
`;

exports[`Storyshots TMS/Tags Small Best Student Tag 1`] = `
<div
  className="sc-idOiZg cUhKUV"
>
  Лучший ученик
</div>
`;

exports[`Storyshots TMS/Tags Small Course Tag 1`] = `
<div
  className="sc-idOiZg botHth"
>
  Front End
</div>
`;

exports[`Storyshots TMS/UserMenu Drop Down Menu 1`] = `
<div
  className="sc-bYEvvW kVsYCP"
>
  <div
    className="sc-fodVek hDQzhk sc-bkzYnD sc-ezredP kwHrhZ heZbSo"
  >
    <p
      className="sc-fFucqa iplZQa"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-bBXrwG bQKKLA sc-cxFLGX khytYf"
  >
    <div
      className="sc-lmoMya hVLOfG"
    >
      Иван
       
      Иванов
    </div>
    <ul
      className="sc-iJuVqt jlVKgU"
    >
      <li
        className="sc-giImIA bzSxth"
      >
        <a
          className="sc-kfzBvY gniMWI"
          href="/user"
        >
          <div
            className="sc-dmlqKv hVCiiD"
          >
            <img
              className="sc-hHfuMS hWALQm"
              src="profile-icon.svg"
            />
          </div>
          <div
            className="sc-fKFxtB iFDgwM"
          >
            ПРОФИЛЬ
          </div>
        </a>
      </li>
      <li
        className="sc-giImIA bzSxth"
      >
        <a
          className="sc-kfzBvY gniMWI"
          href="/setting"
        >
          <div
            className="sc-dmlqKv hVCiiD"
          >
            <img
              className="sc-hHfuMS hWALQm"
              src="setting-icon.svg"
            />
          </div>
          <div
            className="sc-fKFxtB iFDgwM"
          >
            НАСТРОЙКИ
          </div>
        </a>
      </li>
      <li
        className="sc-giImIA bzSxth"
      >
        <a
          className="sc-kfzBvY gniMWI"
          href="/"
        >
          <div
            className="sc-dmlqKv hVCiiD"
          >
            <img
              className="sc-hHfuMS hWALQm"
              src="sign-out-icon.svg"
            />
          </div>
          <div
            className="sc-fKFxtB iFDgwM"
          >
            ВЫХОД
          </div>
        </a>
      </li>
    </ul>
    <div
      className="sc-iwyWTf PPELC"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/UserMenu Menu Item 1`] = `
<a
  className="sc-kfzBvY gniMWI"
  href="/user"
>
  <div
    className="sc-dmlqKv hVCiiD"
  >
    <img
      className="sc-hHfuMS hWALQm"
      src="profile-icon.svg"
    />
  </div>
  <div
    className="sc-fKFxtB iFDgwM"
  >
    ПРОФИЛЬ
  </div>
</a>
`;

exports[`Storyshots Welcome Test Component Example 1`] = `
Array [
  <div>
    helloworld from storybook
  </div>,
  <button
    className="sc-GqePz pnITA"
  >
    Styled Button
  </button>,
]
`;

exports[`Storyshots Welcome Test Component Example Default 1`] = `
Array [
  <div>
    helloworld
  </div>,
  <button
    className="sc-GqePz pnITA"
  >
    Styled Button
  </button>,
]
`;
